<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FifthActivity">

    <TextView
        android:id="@+id/tvDataField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="@style/ActivityLabelTextAppearance"
        app:layout_constraintBottom_toTopOf="@id/etResultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Data" />

    <EditText
        android:id="@+id/etResultField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/activity_fifth_result_field_hint"
        android:inputType="text"
        android:textAppearance="@style/ActivityLabelTextAppearance"
        app:layout_constraintBottom_toTopOf="@id/tvActivityLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDataField"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvActivityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_fifth_text"
        android:textAppearance="@style/ActivityLabelTextAppearance"
        app:layout_constraintBottom_toTopOf="@id/btnDeliverResult"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etResultField" />

    <Button
        android:id="@+id/btnDeliverResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_deliver_result_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDeliverResult" />

</androidx.constraintlayout.widget.ConstraintLayout>